--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <meta name="google-site-verification" content="2DIHH_1SzSXWw2zLDaMshtQy20A552ylAMPnWhutlr8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ved </title>
     <style>
         h1{
-            font-size: 100px;
+            font-size: 50px;
             text-align: center;
             font-family: verdana;
+            color:red;
         }
     </style>
 </head>
